# SC-Core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Workspace.lua  premake5.lua
SupercellBytestream/: BufferStream.h  FileStream.h
SupercellBytestream/base/: BytestreamBase.h
cmake/: SupercellCore.cmake  constants.cmake  supercell-sdk-macros.cmake
exception/: GeneralRuntimeException.h  MemoryAllocationException.h
exception/image/: CorruptedImageBufferException.h  InvaliParamsException.h  StbLoadingException.h  StbWritingException.h
exception/io/: BinariesExceptions.h  FileExceptions.h  FileExistException.h  IOGeneralException.h  ReadFileException.h  WriteFileException.h
generic/: image.h  md5.cpp  md5.h  raw_image.cpp  ref.h
generic/image/: image.cpp  (+4 more)
io/: buffer_stream.cpp  buffer_stream.h  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  stream.cpp  stream.h
math/: alpha_color.h  color.cpp  color.h  matrix2x3.cpp  matrix2x3.h  point.cpp  point.h  rect.cpp  rect.h
memory/: alloc.h
scripts/: build_android.bat
stb/: stb.cpp  stb.h  stb_image_resize.h  stb_image_write.h
supercell-core/: CMakeLists.txt
supercell-core/source/core/console/: console.h
supercell-core/source/core/crypto/: base64.cpp  base64.h  md5.h
supercell-core/source/core/exception/: exception.cpp  exception.h
supercell-core/source/core/generic/: non_copyable.h  non_movable.h
supercell-core/source/core/image/: compressed_image.h  image.cpp  image.h  raw_image.cpp  raw_image.h
supercell-core/source/core/io/: buffer_stream.cpp  buffer_stream.h  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  stream.cpp  stream.h
supercell-core/source/core/math/: color_rgb.h  color_rgba.h  matrix2d.h  matrix3d.h  point.h  rect.h  vector3d.h  vector4d.h
supercell-core/source/core/memory/: memory.h  memory_pool.h
supercell-core/source/core/stb/: stb.cpp  stb.h
supercell-core/source/core/time/: timer.h
test/: main.cpp
(+35 files in other folders)
